<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.correro.alejandro.profileapp.ui.ProfileActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/ivCat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintDimensionRatio="h,16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cat1"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/txtWeb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_main_view_margin_default"
        android:layout_marginStart="@dimen/activity_main_view_margin_default"
        android:layout_marginTop="@dimen/activity_main_view_margin_default"
        android:hint="@string/activity_main_txtWeb_hint"
        android:inputType="textUri"
        android:textSize="@dimen/activity_main_textSize"
        app:layout_constraintEnd_toStartOf="@+id/ivWeb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblWeb" />

    <ImageView
        android:id="@+id/ivWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_main_view_margin_default"
        android:layout_marginEnd="@dimen/activity_main_view_margin_default"
        android:src="@drawable/ic_web_grey_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtWeb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtWeb"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/lblWeb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_main_view_margin_default"
        android:layout_marginStart="@dimen/activity_main_view_margin_default"
        android:layout_marginTop="@dimen/activity_main_view_margin_default"
        android:text="@string/activity_main_lblWeb_text"
        android:textSize="@dimen/activity_main_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_main_view_margin_default"
        android:layout_marginStart="@dimen/activity_main_view_margin_default"
        android:hint="@string/activity_main_txtAddress_hint"
        android:textSize="@dimen/activity_main_textSize"
        app:layout_constraintEnd_toStartOf="@+id/ivWeb"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAddress" />

    <ImageView
        android:id="@+id/ivAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_main_view_margin_default"
        android:layout_marginEnd="@dimen/activity_main_view_margin_default"
        android:src="@drawable/ic_map_grey_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtAddress"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/lblAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_main_view_margin_default"
        android:layout_marginStart="@dimen/activity_main_view_margin_default"
        android:layout_marginTop="@dimen/activity_main_view_margin_default"
        android:text="@string/activity_main_lblAddress_text"
        android:textSize="@dimen/activity_main_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_main_view_margin_default"
        android:layout_marginTop="@dimen/activity_main_view_margin_default"
        android:ems="13"
        android:hint="@string/activity_main_lblHint_hint"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/activity_main_textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEmail" />

    <ImageView
        android:id="@+id/ivEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_main_view_margin_default"
        android:layout_marginEnd="@dimen/activity_main_view_margin_default"
        android:layout_marginStart="@dimen/activity_main_view_margin_default"
        android:layout_marginTop="@dimen/activity_main_view_margin_default"
        android:src="@drawable/ic_email_grey_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtEmail"
        app:layout_constraintStart_toEndOf="@+id/txtEmail"
        app:layout_constraintTop_toTopOf="@+id/txtEmail"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_main_view_margin_default"
        android:layout_marginTop="@dimen/activity_main_view_margin_default"
        android:ems="5"
        android:hint="@string/activity_main_txtPhone_hint"
        android:inputType="phone"
        android:textSize="@dimen/activity_main_textSize"
        app:layout_constraintEnd_toStartOf="@+id/ivPhone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivEmail"
        app:layout_constraintTop_toBottomOf="@+id/lblPhone" />

    <ImageView
        android:id="@+id/ivPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_main_view_margin_default"
        android:layout_marginEnd="@dimen/activity_main_view_margin_default"
        android:layout_marginStart="@dimen/activity_main_view_margin_default"
        android:src="@drawable/ic_local_phone_grey_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtPhone"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_main_view_margin_default"
        android:layout_marginStart="@dimen/activity_main_view_margin_default"
        android:layout_marginTop="@dimen/activity_main_view_margin_default"
        android:text="@string/activity_main_lblEmail_text"
        android:textSize="@dimen/activity_main_textSize"
        app:layout_constraintEnd_toEndOf="@+id/txtEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <TextView
        android:id="@+id/lblPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_main_view_margin_default"
        android:layout_marginStart="@dimen/activity_main_view_margin_default"
        android:layout_marginTop="@dimen/activity_main_view_margin_default"
        android:text="@string/activity_main_lblPhone_text"
        android:textSize="@dimen/activity_main_textSize"
        app:layout_constraintEnd_toEndOf="@+id/txtPhone"
        app:layout_constraintStart_toStartOf="@+id/txtPhone"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_main_view_margin_default"
        android:layout_marginStart="@dimen/activity_main_view_margin_default"
        android:layout_marginTop="@dimen/activity_main_view_margin_default"
        android:hint="@string/activity_main_txtName_text"
        android:inputType="textPersonName"
        android:textSize="@dimen/activity_main_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblName"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/lblName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_main_view_margin_default"
        android:layout_marginStart="@dimen/activity_main_view_margin_default"
        android:layout_marginTop="@dimen/activity_main_view_margin_default"
        android:text="@string/activity_main_lblName_text"
        android:textSize="@dimen/activity_main_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCat" />


    <TextView
        android:id="@+id/lblCatName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_main_view_margin_default"
        android:layout_marginEnd="@dimen/activity_main_view_margin_default"
        android:alpha="0.6"
        android:background="@color/test2"
        android:padding="@dimen/activity_main_lblCatName_padding"
        android:text="@string/activity_main_lblCatName_text"
        android:textColor="@color/activity_main_lblCatName_text_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ivCat"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>
