<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:orientation="horizontal">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/activatedBackgroundIndicator"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="@dimen/activity_main_item_image_width"
            android:layout_height="@dimen/activity_main_item_image_height"
            android:layout_marginBottom="@dimen/activity_main_view_margin_default"
            android:layout_marginStart="@dimen/activity_main_view_margin_default"
            android:layout_marginTop="@dimen/activity_main_view_margin_default"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.36"
            app:srcCompat="@mipmap/ic_launcher"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/lblName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_main_view_margin_default"
            android:layout_marginStart="@dimen/activity_main_view_margin_default"
            android:layout_marginTop="@dimen/activity_main_view_margin_default"
            android:maxLines="1"
            android:textAlignment="textStart"
            android:textColor="@color/activity_main_item_lblname_text_color"
            android:textSize="@dimen/activity_main_item_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="0.9"
            app:layout_constraintStart_toEndOf="@+id/ivAvatar"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Test text" />

        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_main_view_margin_default"
            android:layout_marginStart="@dimen/activity_main_view_margin_default"
            android:layout_marginTop="@dimen/activity_main_view_margin_default"
            android:maxLines="1"
            android:textSize="@dimen/activity_main_item_textSize_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivAvatar"
            app:layout_constraintTop_toBottomOf="@+id/lblName"
            tools:text="Test text" />

        <TextView
            android:id="@+id/lblPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_main_view_margin_default"
            android:layout_marginStart="@dimen/activity_main_view_margin_default"
            android:layout_marginTop="@dimen/activity_main_view_margin_default"
            android:maxLines="1"
            android:textSize="@dimen/activity_main_item_textSize_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivAvatar"
            app:layout_constraintTop_toBottomOf="@+id/lblEmail"
            tools:text="Test text" />


        <TextView
            android:id="@+id/lblEditUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_main_view_margin_default"
            android:layout_marginEnd="@dimen/activity_main_view_margin_default"
            android:layout_marginStart="@dimen/activity_main_view_margin_default"
            android:layout_marginTop="@dimen/activity_main_view_margin_default"
            android:text="@string/activity_main_item_lblEditUser_text"
            android:textColor="@color/activity_main_item_text_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/lblDeleteUser"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblPhone" />

        <TextView
            android:id="@+id/lblDeleteUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_main_view_margin_default"
            android:layout_marginEnd="@dimen/activity_main_view_margin_default"
            android:layout_marginTop="@dimen/activity_main_view_margin_default"
            android:text="@string/activity_main_item_lblDeleteUser_text"
            android:textColor="@color/activity_main_item_text_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/lblOptions"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lblEditUser"
            app:layout_constraintTop_toBottomOf="@+id/lblPhone" />

        <TextView
            android:id="@+id/lblOptions"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/activity_main_view_margin_default"
            android:layout_marginEnd="@dimen/activity_main_view_margin_default"
            android:layout_marginTop="@dimen/activity_main_view_margin_default"
            android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
            android:text="@string/activity_main_item_lblOptions_text"
            android:textColor="@color/activity_main_item_text_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lblDeleteUser"
            app:layout_constraintTop_toBottomOf="@+id/lblPhone" />


    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>